# WroclawZero

./: .gitignore  CMakeLists.txt  README.md  code-merger.py
configs/: example_config.yaml  tictactoe1.yaml  tictactoe2.yaml  tictactoe3.yaml
data/tictactoe/1/: model_best  model_compressed  models_stats.yaml
data/tictactoe/1/logs/: events.out.tfevents.1655758764.domiko.44537.0  events.out.tfevents.1655758937.domiko.48804.0  events.out.tfevents.1655758996.domiko.50501.0  events.out.tfevents.1655759009.domiko.50841.0  events.out.tfevents.1655759098.domiko.52927.0
data/tictactoe/1/models/: model_0  model_1  model_10  model_11  model_12  model_13  model_14  model_15  model_16  model_17  model_18  model_19  model_2  model_20  model_21  model_22  model_24  model_25  model_26  model_27  model_28  model_29  model_3  model_30  model_31  model_32  model_33  model_34  model_35  model_36  model_37  model_38  model_39  model_4  model_40  model_41  model_42  model_43  model_44  model_45  (+10 more)
data/tictactoe/2/: model_best  model_compressed
data/tictactoe/2/logs/: events.out.tfevents.1655759841.domiko.91234.0
data/tictactoe/2/models/: model_0  model_1  model_10  model_11  model_12  model_13  model_14  model_15  model_16  model_17  model_18  model_19  model_2  model_20  model_21  model_22  model_23  (+31 more)
data/tictactoe/3/: models_stats.yaml
data/tictactoe/4/: models_stats.yaml
data/tictactoe/5/: models_stats.yaml
data/tictactoe/6/: model_best  models_stats.yaml
oware-endgame/: generate  generate.cpp  out  samples
tests/: CMakeLists.txt
tests/games/: CMakeLists.txt  connect4_test.cpp  oware_test.cpp  tictactoe_test.cpp
tests/mcts/: CMakeLists.txt  dataset_test.cpp  pit_play_test.cpp  selfplay_connect4_test.cpp  selfplay_test.cpp
tests/model/: CMakeLists.txt  connect4_model.py  connect4_test.cpp  model_test.cpp  oware_test.cpp  tictactoe_test.cpp
tests/nn/: CMakeLists.txt  main.cpp
wroclaw_zero/: CMakeLists.txt
wroclaw_zero/src/games/: CMakeLists.txt
wroclaw_zero/src/mcts/: CMakeLists.txt
wroclaw_zero/src/model/: CMakeLists.txt
wroclaw_zero/src/nn_avx_fast/: CMakeLists.txt
wroclaw_zero/src/python_training/: CommunicationInterface.py  main.py
wroclaw_zero/src/training/: CMakeLists.txt
(+543 files in other folders)
